syntax = "proto3";

package foodordering.customer;

option go_package = "github.com/MikhailMishutkin/FoodOrdering/proto/pkg/contracts/customer";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "validate/validate.proto";
import "google/protobuf/timestamp.proto";


service OfficeService {
  rpc CreateOffice(CreateOfficeRequest) returns (CreateOfficeResponse) {
    option (google.api.http) = {
      post: "/customer/offices"
      body: "*"
    };
  }
  rpc GetOfficeList(GetOfficeListRequest) returns (GetOfficeListResponse) {
    option (google.api.http) = {
      get: "/customer/offices"
    };
  }
}

message CreateOfficeRequest {
  string name = 1 [(validate.rules).string.min_len = 6,(google.api.field_behavior) = REQUIRED];
  string address = 2 [(validate.rules).string.min_len = 6,(google.api.field_behavior) = REQUIRED];
}

message CreateOfficeResponse {}

message GetOfficeListRequest {
}

message GetOfficeListResponse {
  repeated Office result = 1;
}

message Office {
  string uuid = 1;
  string name = 2;
  string address = 3;
  google.protobuf.Timestamp created_at = 4;
}